--- a/src/sass/_inner.sass
+++ b/src/sass/_inner.sass
@@ -421,6 +421,9 @@ $green: #9bc1bc
 		vertical-align: top
 	.man__text
 		color: #000
+		padding-right: 50px
+		+r3
+			padding-right: 0
 	.h4
 		+reg
 	.fa-angle-right
