--- a/src/sass/_popups.sass
+++ b/src/sass/_popups.sass
@@ -21,6 +21,20 @@
             transform: scale(1)
     +r4
         padding-bottom: 25px
+    &_download
+        .popup
+            &__in
+                max-width: 450px
+            &__body
+                padding: 19px 20px 30px
+                .profile-form__add
+                    padding: 7px 0 16px
+    &__name
+        color: #282828
+        font-size: 22px
+        line-height: 26px
+        +reg
+        margin-bottom: 10px
     &__in
         box-shadow:  0 2px 0 #e6e7e3, 0 5px 20px rgba(0, 0, 0, 0.28)
         border: 1px solid #d0d0d0
