--- a/src/partials/header-user.html
+++ b/src/partials/header-user.html
@@ -4,11 +4,11 @@
 		<a href="#" class="logo">
 			<i class="icon-logo"></i>
 		</a>
-		<button class="btn-nav js-nav-btn">
+		<button class="btn-nav js-nav-btn" data-id="main-nav">
 			<span></span>
 		</button>
 		<div class="header__inner">
-			<nav class="nav js-nav">
+			<nav class="nav js-nav" data-nav="main-nav">
 				<ul class="nav__list">
 					<li class="nav__item">
 						<a href="#" class="nav__link is-brown">
@@ -60,7 +60,8 @@
 			<a href="#" class="btn-out">
 				<i class="fa fa-sign-out"></i>
 			</a>
-			<a href="#" class="btn-profile">
+			<a href="#" class="btn-profile js-nav-btn"  data-id="user-nav">
+				<i></i>
 				<div class="btn-profile__img" style="background-image: url(https://placecage.com/50/50);"></div>
 				<span>Профайл</span>
 			</a>
