--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -190,12 +190,56 @@ body
 		position: absolute
 		top: 0
 		right: 0
+		padding: 10px
+		width: 60px
+		height: 60px  
+		margin: 0
+	&.is-active
+		+r2
+			background: #ff8c61
+		.btn-profile
+			&__img
+				+r2
+					opacity: 0
+					visibility: hidden
+		i
+			opacity: 1
+			visibility: visible
+			&:before
+				transform: rotate(45deg)
+			&:after
+				transform: rotate(-45deg)
 	&__img
 		width: 40px
 		height: 40px
 		border-radius: 50%
 		+cover
 		margin-right: 6px
+		+r2
+			margin: 0
+	i
+		position: absolute
+		top: 0
+		bottom: 0
+		left: 0
+		right: 0
+		line-height: 60px
+		text-align: center
+		display: none
+		color: #fff
+		opacity: 0
+		visibility: hidden
+		+r2
+			display: block
+		&:before, &:after
+			position: absolute
+			top: 28px
+			left: 50%
+			width: 26px
+			margin-left: -13px
+			content: "" 
+			border-bottom: 4px solid #fff
+			transition: transform 0.3s
 	&__img, span
 		display: inline-block
 		vertical-align: middle
