--- a/src/partials/header-profile.html
+++ b/src/partials/header-profile.html
@@ -1,4 +1,5 @@
 <a href="#" class="top-banner" style="background-image: url(img/top-banner.jpg);"></a>
+<div class="overlay"></div>
 <header class="header js-header">
 	<div class="header__fixed">
 		<a href="#" class="logo">
@@ -57,12 +58,13 @@
 					</li>
 				</ul>
 			</nav>
-			<a href="#" class="btn-enter">
+			<a href="#" class="btn-enter js-nav-btn is-profile" data-id="user-nav">
 				<i class="fa fa-user"></i>
+				<i class="is-close"></i>
 				<span>Профайл</span>
 			</a>
 		</div>
-		<div class="mini-search">
+		<div class="mini-search mini-search_mod">
 			<a href="#" class="fa fa-search"></a>
 		</div>
 	</div>
