--- a/src/partials/header-user.html
+++ b/src/partials/header-user.html
@@ -1,4 +1,5 @@
 <a href="#" class="top-banner" style="background-image: url(img/top-banner.jpg);"></a>
+<div class="overlay"></div>
 <header class="header js-header">
 	<div class="header__fixed">
 		<a href="#" class="logo">
@@ -60,7 +61,7 @@
 			<a href="#" class="btn-out">
 				<i class="fa fa-sign-out"></i>
 			</a>
-			<a href="#" class="btn-profile js-nav-btn"  data-id="user-nav">
+			<a href="#" class="btn-profile js-nav-btn is-profile"  data-id="user-nav">
 				<i></i>
 				<div class="btn-profile__img" style="background-image: url(https://placecage.com/50/50);"></div>
 				<span>Профайл</span>
