--- a/src/partials/header-main.html
+++ b/src/partials/header-main.html
@@ -1,4 +1,5 @@
 <a href="#" class="top-banner" style="background-image: url(img/top-banner.jpg);"></a>
+<div class="overlay"></div>
 <header class="header">
 	<div class="header__fixed">
 		<a href="#" class="logo">
