--- a/src/partials/header-main.html
+++ b/src/partials/header-main.html
@@ -32,29 +32,39 @@
 							</div>
 						</a>
 					</li>
-					<li class="nav__item">
-						<a href="#" class="nav__link is-orange">
+					<li class="nav__item nav-specials js-nav-specials">
+						<a href="#" class="nav-specials__link nav__link is-orange js-specials-link">
 							<div class="nav__link-in">
-								<span>Патронус</span>
-								<small>Детский правозащитный проект</small>
+								<span>Спецпроекты</span>
+								<i class="fa fa-chevron-down"></i>
 							</div>
 						</a>
-					</li>
-					<li class="nav__item">
-						<a href="#" class="nav__link is-orange">
-							<div class="nav__link-in">
-								<span>Пазлы</span>
-								<small>Знакомства для инвалидов</small>
-							</div>
-						</a>
-					</li>
-					<li class="nav__item">
-						<a href="#" class="nav__link is-orange">
-							<div class="nav__link-in">
-								<span>Бюро справедливости</span>
-								<small>Обратиться к депутату</small>
-							</div>
-						</a>
+						<ul class="nav-specials__list js-specials-drop">
+							<li class="nav__item">
+								<a href="#" class="nav__link is-orange">
+									<div class="nav__link-in">
+										<span>Патронус</span>
+										<small>Детский правозащитный проект</small>
+									</div>
+								</a>
+							</li>
+							<li class="nav__item">
+								<a href="#" class="nav__link is-orange">
+									<div class="nav__link-in">
+										<span>Пазлы</span>
+										<small>Знакомства для инвалидов</small>
+									</div>
+								</a>
+							</li>
+							<li class="nav__item">
+								<a href="#" class="nav__link is-orange">
+									<div class="nav__link-in">
+										<span>Бюро справедливости</span>
+										<small>Обратиться к депутату</small>
+									</div>
+								</a>
+							</li>
+						</ul>
 					</li>
 				</ul>
 			</nav>
