--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -2851,6 +2851,10 @@
 			margin-bottom: 10px
 			+r3
 				max-width: 320px
+	&__top
+		+r3
+			max-width: 320px
+			margin: 0 auto 
 
 .profile-title
 	color: #33333b
