--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -492,7 +492,7 @@ a
 				.item__subtitle
 					font-size: 56px
 					line-height: 66px
-					max-height: 132px 
+					max-height: 132px
 			&__instruction
 				margin-bottom: 15px
 	&__in
@@ -651,7 +651,7 @@ a
 					.item__subtitle
 						font-size: 24px
 						line-height: 27px
-						max-height: 54px 
+						max-height: 54px
 	+r3
 		max-width: 320px
 		margin: 0 auto 30px
@@ -681,7 +681,7 @@ a
 					height: 217px
 				&__txt
 					height: 150px
-				&__instruction 
+				&__instruction
 					margin: 0
 		.man
 			display: none
@@ -715,6 +715,7 @@ a
 		vertical-align: middle
 		img
 			max-width: 100%
+			border-radius: 50% 50% 0
 	+r3
 		&_big-img
 			.man__text
