--- a/src/sass/_inner.sass
+++ b/src/sass/_inner.sass
@@ -233,18 +233,18 @@ $green: #9bc1bc
 			&:before
 				width: 100%
 			.fa, span
-				color: #fff 
+				color: #fff
 	&_mod
 		margin-left: 108px
 	&:before
-		content: "" 
+		content: ""
 		position: absolute
 		top: 0
 		bottom: 0
 		left: 0
 		width: 0
 		transition: width 0.25s
-		background: #9BC1BC 
+		background: #9BC1BC
 	.fa
 		margin-right: 18px
 		font-size: 24px
@@ -415,6 +415,7 @@ $green: #9bc1bc
 		margin: 0 auto
 		font-size: 18px
 		+reg
+		width: 100%
 		p
 			margin-bottom: 0
 	.man__img
