--- a/src/sass/_typography.sass
+++ b/src/sass/_typography.sass
@@ -33,6 +33,9 @@ $indent: 30px
 		font-size: 18px
 	p
 		margin-bottom: $indent
+	p, li
+		strong, b
+			+lorab
 	ul
 		margin-bottom: $indent
 		li
