--- a/src/sass/_inner.sass
+++ b/src/sass/_inner.sass
@@ -347,7 +347,7 @@ $green: #9bc1bc
 // slider on inner pages
 .inner-slider
 	position: relative
-	margin-bottom: 15px
+	// margin-bottom: 15px
 	.slick-dots
 		margin-bottom: 20px
 		li
@@ -390,6 +390,14 @@ $green: #9bc1bc
 			button
 				width: 8px
 				height: 8px
+	&__caption
+		margin-bottom: 35px
+		padding: 15px 0 0
+		figure
+			margin: 0
+			outline: none
+	&__top
+		position: relative
 
 .list-links
 	margin: 53px 0 43px
@@ -447,6 +455,7 @@ $green: #9bc1bc
 	&__img
 		display: block
 		max-width: 100%
+		margin: 0 auto
 	&__link
 		position: absolute
 		top: 20px
