--- a/src/sass/lib/_slick.sass
+++ b/src/sass/lib/_slick.sass
@@ -53,6 +53,7 @@
 	img
 		display: block
 		max-width: 100%
+		margin: 0 auto
 	&.slick-loading img
 		display: none
 	&.dragging img
@@ -75,7 +76,7 @@
 	height: 20px
 	background: none
 	left: 0
-	z-index: 1 
+	z-index: 1
 	&:focus
 		outline: none
 	&.slick-disabled
@@ -88,7 +89,7 @@
 		vertical-align: middle
 		font-size: 15px
 		color: #fff
-		background: #000 
+		background: #000
 .slick-next
 	right: 0
 	left: auto
@@ -108,7 +109,7 @@
 		padding: 0 3px
 		&.slick-active
 			button
-				background: #000 
+				background: #000
 	button
 		display: block
 		width: 10px
