--- a/src/sass/_typography.sass
+++ b/src/sass/_typography.sass
@@ -194,3 +194,21 @@ $indent: 30px
 			overflow: hidden
 		.expand__link
 			font-size: 18px
+	&__content
+		padding: 0
+		p, ul, ol, .news-header, .divider
+			max-width: 630px
+		p, ul, ol, blockquote
+			margin: 0 auto 30px
+		.news-header
+			margin: 0 auto
+			h4, .h4
+				+bold
+		.divider
+			margin: 25px auto
+		blockquote
+			max-width: 740px
+		figure, blockquote
+			p
+				max-width: 100%
+				margin: 0
