update list article content

--- a/src/sass/_typography.sass
+++ b/src/sass/_typography.sass
@@ -196,9 +196,9 @@ $indent: 30px
 			font-size: 18px
 	&__content
 		padding: 0
-		p, ul, ol, .news-header, .divider
+		p, ul, ol, .news-header, .divider, figure, h2, h3, h4, .h2, .h3, .h4
 			max-width: 630px
-		p, ul, ol, blockquote
+		p, ul, ol, blockquote, figure, h2, h3, h4, .h2, .h3, .h4
 			margin: 0 auto 30px
 		.news-header
 			margin: 0 auto
@@ -212,3 +212,9 @@ $indent: 30px
 			p
 				max-width: 100%
 				margin: 0
+		.inner-slider
+			figure
+				margin: 0
+				max-width: 100%
+		figcaption
+			padding: 15px 0 0
