--- a/src/sass/_typography.sass
+++ b/src/sass/_typography.sass
@@ -36,6 +36,11 @@ $indent: 30px
 	p, li
 		strong, b
 			+lorab
+		a
+			color: #76938f
+			.no-touch &
+				&:hover
+					text-decoration: underline
 	ul
 		margin-bottom: $indent
 		li
